# goms-2023-t3-pj-traffic-analyzer

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  run.sh  test_udp_port.py
config/: telegraf.conf
docker/: dashboard.json  docker-compose.yml
grafana/dashboards/: default_dashboard.json
scripts/: initialize_db.sh
src/: lib.rs  main.rs
src/app/: cidr_lookup.rs  consumer.rs  enricher.rs  enricher_to_db.rs  graphana.ipynb  influx_db.rs  listener.rs  mod.rs  producer.rs
src/db/: cidr_lookup.rs  mod.rs
src/kafka/: consumer.rs  producer.rs
src/kafka_test/: consumer.rs  main.rs  producer.rs
src/process/: enricher.rs
