[package]
name = "goms-2023-t3-pj-traffic-analyzer-doglover645"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netflow_parser = "0.3.6"
rdkafka = "0.36.2"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }

[[bin]]
name = "ta-listener"
path = "src/app/listener.rs"

[[bin]]
name = "ta-enricher"
path = "src/app/enricher.rs"
